navbar desktop terminado, avance hero desktop

--- a/index.html
+++ b/index.html
@@ -1,38 +1,60 @@
 <!DOCTYPE html>
 <html lang="es_CL">
 <head>
-	<title>TITLE</title>
+	<title>LabCar</title>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="CONTENT">
+	<meta name="description" content="Desarrollo de Proyecto Final de Sprint 4">
 	<meta name="author" content="Caterina Da Silva">
 	<!-- Bootstrap Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<!-- Fontawesome -->
-	<script src="https://use.fontawesome.com/d2c9b2c5c1.js"></script>
+	<!-- Font icon -->
+	<link rel="stylesheet" type="text/css" href="assets/css/font.css">
+	<!-- Styles -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/media.css">
 </head>
 <body>
 <menu>
-	<div class="container">
-		<div class="row">
-			
+	<nav class="navbar navbar-default">
+		<div class="container">
+		<!-- Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
 		</div>
-	</div>
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="#">Viaja</a></li>
+				<li><a href="#">Conduce</a></li>
+				<li><a href="#">Inicia Sesión</a></li>
+			</ul>
+		</div><!-- /.navbar-collapse -->
+		</div><!-- /.container -->
+	</nav>
 </menu>
 <header>
-	<div class="container">
-		<div class="row">
-			
-		</div>
+	<div class="box">
+		<h2>Disfruta del viaje<br>
+		Eres dueño de tu tiempo</h2>
+		<p class="lead">Viaja con <img src="assets/img/logo-blanco.png" alt=""></p>
+		<button class="btn btn-default">REGÍSTRATE</button>
+		<p class="lines">O BIEN</p>
+		<button class="btn btn-primary">Conviértete en conductor</button>
+</h2>
 	</div>
 </header>
 <section id="" >
 	<div class="container">
 		<div class="row">
-			
+
 		</div>
 	</div>
 </section>
