hero y nav responsive terminado

--- a/index.html
+++ b/index.html
@@ -41,14 +41,18 @@
 	</nav>
 </menu>
 <header>
-	<div class="box">
+	<div class="box hidden-xs">
 		<h2>Disfruta del viaje<br>
 		Eres dueño de tu tiempo</h2>
 		<p class="lead">Viaja con <img src="assets/img/logo-blanco.png" alt=""></p>
 		<button class="btn btn-default">REGÍSTRATE</button>
-		<p class="lines">O BIEN</p>
+		<p class="lines">O bien
+		</p>
 		<button class="btn btn-primary">Conviértete en conductor</button>
-</h2>
+	</div>
+	<div class="box xs hidden-sm hidden-md hidden-lg">
+		<h2>Comienza a viajar con <img src="assets/img/logo-blanco.png" alt=""></h2>
+		<button class="btn btn-primary">Descarga la app</button>
 	</div>
 </header>
 <section id="" >
