sección app terminada con responsive

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 		Eres dueño de tu tiempo</h2>
 		<p class="lead">Viaja con <img src="assets/img/logo-blanco.png" alt=""></p>
 		<button class="btn btn-default">REGÍSTRATE</button>
-		<p class="lines">O bien
-		</p>
+		<p class="lines">O bien</p>
 		<button class="btn btn-primary">Conviértete en conductor</button>
 	</div>
 	<div class="box xs hidden-sm hidden-md hidden-lg">
@@ -55,7 +54,34 @@
 		<button class="btn btn-primary">Descarga la app</button>
 	</div>
 </header>
-<section id="" >
+<section id="app">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="box col-xs-12 col-sm-10">
+				<div class="row">
+					<div class="col-xs-12 col-sm-7 text-center left">
+						<h2 class="hidden-sm hidden-md hidden-lg">La nueva app</h2>
+						<img src="assets/img/celular.png" alt="">
+					</div>
+					<div class="col-xs-12 col-sm-4 right hidden-xs">
+						<h2>Descarga la nueva app</h2>
+						<p class="lead">La versión actualizada de LabCar está llena de nuevas funciones para llegar a donde quieras aún más fácil y rápido.</p>
+						<p class="lead">Con solo tocar un botón, un auto llega justo a tu ubicación. Súbete y no te preocupes: tu conductor sabe exactamente a dónde ir.</p>
+					</div>
+				</div>
+			</div>
+			<h3 class="text-center hidden-sm hidden-md hidden-lg">Llega a tu destino aún más rápido</h3>
+		</div>
+	</div>
+</section>
+<section id="driver">
+	<div class="container-fluid">
+		<div class="row">
+
+		</div>
+	</div>
+</section>
+<section id="g-map">
 	<div class="container">
 		<div class="row">
 
