sección driver con responsive finalizada

--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
 <section id="driver">
 	<div class="container-fluid">
 		<div class="row">
-
+			<div class="shadow-box col-xs-12 col-sm-4 col-sm-offset-8">
+				<h2>Conduce cuando quieras</h2>
+				<p>LabCar es una opción flexible para alcanzar tus metas financieras.</p>
+				<button class="btn btn-secondary">Conviértete en conductor</button>
+			</div>
 		</div>
 	</div>
 </section>
